@@ -2,3 +2,4 @@ require 'activesupport'
 require 'active_hash/base'
 require 'active_file/base'
 require 'active_yaml/base'
+require 'associations/associations'
